--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     
-    <title>React App</title>
+    <title>Pequeno Lord</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
